# lilith-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
lilith-cli/: CHANGELOG.md  README.md  pyproject.toml
lilith-cli/docs/: plugins.md
lilith-cli/lilith_cli/: __init__.py  _learn_section.py  agent.py  agent_modes.py  client.py  commands.py  config.py  doctor.py  extra_commands.py  extra_commands_watch.py  hooks.py  main.py  ops.py  ops_do.py  ops_knowledge.py  ops_pantheon.py  ops_queue.py  ops_spawn.py  pipeline_command.py  plan.py  process_manager.py  providers.py  render.py  repl.py  tool_progress.py  trace.py  workflow_command.py
lilith-cli/tests/: _lsp_fake_server.py  conftest.py  test_agent_command.py  test_agent_view.py  test_alias_command.py  test_alias_expansion.py  test_alias_get_command.py  test_anthropic_tools.py  test_auto_command.py  test_autonomy_safeguards.py  test_base64_command.py  test_bench_command.py  test_bifrost_command.py  test_bookmark_command.py  test_capture_command.py  test_capture_exclude_system.py  test_capture_first_last.py  test_capture_tags.py  test_changelog_command.py  test_changelog_list.py  test_clear_and_recent.py  test_cli.py  test_client.py  test_commands.py  test_commands_list.py  test_commands_state.py  test_compact_command.py  test_compact_flags.py  test_compare_command.py  test_compare_recent.py  test_conclave_command.py  test_config_command.py  test_config_mcp_servers.py  test_context.py  test_context_render.py  test_continue_command.py  test_copy_command.py  test_cost_command.py  test_costs_command.py  test_delegate_subcommand_flags.py  (+122 more)
lilith-core/: README.md  policy_scenarios.example.yaml  pyproject.toml
lilith-core/lilith_core/: __init__.py  audit_trail.py  bus.py  config.py  exceptions.py  extension_registry.py  goal_state.py  governance.py  hooks.py  logger.py  policy_engine.py  policy_harness.py  providers.py  sandbox.py  sandbox_hooks.py  token_optimizer.py  tools.py  types.py
lilith-core/tests/: test_audit_trail.py  test_bus.py  test_config.py  test_exceptions.py  test_extension_registry.py  test_goal_state.py  test_governance.py  test_hooks.py  test_litellm_provider.py  test_local_provider.py  test_policy_engine.py  test_policy_harness.py  test_sandbox.py  test_sandbox_hooks.py  test_token_optimizer.py  test_tool_catalog.py
lilith-memory/: README.md  pyproject.toml
lilith-memory/lilith_memory/: __init__.py  chunker.py  consolidation.py  ontology_graph.py  preferences.py  read_guard.py  store.py  vector_recall.py
lilith-memory/tests/: conftest.py  test_chunker.py  test_consolidation.py  test_layers.py  test_layers_extra.py  test_mem0_backend.py  test_memory.py  test_ontology_graph.py  test_preferences.py  test_sqlite_backend.py  test_store.py  test_vector_recall.py
lilith-orchestrator/: README.md  pyproject.toml
lilith-orchestrator/lilith_orchestrator/: __init__.py  agent_router.py  card_bridge.py  dispatch.py  engine.py  nl_workflow.py  policy.py  policy_mcp.py  self_correction.py  subagents.py  task_router.py  tracing.py  workflow.py  workflow_packages.py  workflow_validator.py
lilith-orchestrator/tests/: test_agent_router.py  test_card_bridge.py  test_dispatch.py  test_engine_cache.py  test_engine_hooks.py  test_engine_tracing.py  test_engine_usage.py  test_engine_workflow.py  test_graph.py  test_graph_extras.py  test_nl_workflow.py  test_pipeline.py  test_pipeline_hooks.py  test_policy.py  test_policy_integration.py  test_policy_mcp.py  test_self_correction.py  test_state.py  test_subagent_hooks.py  test_subagents.py  test_subagents_cli.py  test_task_router.py  test_tracing.py  test_workflow.py  test_workflow_hooks.py  test_workflow_packages.py  test_workflow_subagent_integration.py  test_workflow_validator.py
lilith-orchestrator/workflows/: subagent_code_review.yaml
lilith-skills/: README.md  pyproject.toml
(+90 files in other folders)
