[project]
name = "lilith-workspace"
version = "4.4.0"
description = "Lilith CLI — Norse-themed terminal IDE and agent interface (uv workspace)"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-cli"]

[tool.uv.sources]
lilith-cli = { workspace = true }

[tool.uv.workspace]
members = ["lilith-cli", "lilith-core", "lilith-skills", "lilith-orchestrator", "lilith-memory"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
