[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-core"
version = "3.4.0"
description = "Base types, configuration, and logging for Lilith"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["pyyaml", "python-dotenv", "requests", "httpx"]

[project.optional-dependencies]
litellm = ["litellm"]

[project.urls]
Repository = "https://github.com/BrierAinz/lilith-cli"

[tool.hatch.build.targets.wheel]
packages = ["lilith_core"]
