[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-orchestrator"
version = "1.13.0"
description = "Agent coordination and task orchestration"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "lilith-core",
    "lilith-memory",
    "lilith-skills",
    "mcp>=1.28.1",
]

[project.urls]
Repository = "https://github.com/BrierAinz/lilith-cli"

[tool.hatch.build.targets.wheel]
packages = ["lilith_orchestrator"]

[tool.uv.sources]
lilith-core = { workspace = true }
lilith-memory = { workspace = true }
lilith-skills = { workspace = true }
