[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lilith-skills"
version = "1.6.0"
description = "Skill management and discovery for Lilith"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["lilith-core", "pydantic>=2", "pyyaml>=6"]

[project.urls]
Repository = "https://github.com/BrierAinz/lilith-cli"

[tool.hatch.build.targets.wheel]
packages = ["lilith_skills"]

[tool.uv.sources]
lilith-core = { workspace = true }
